@startuml

class RequestEnrollmentUI {
}

class RequestEnrollmentController {
}

class RequestEnrollmentRepository {
}

class Course {
}

RequestEnrollmentUI --> RequestEnrollmentController: uses
RequestEnrollmentController --> RequestEnrollmentRepository: uses the repository
RequestEnrollmentController --> Course: Changes status

@enduml